# SparkEngine

./: .gitmodules  CMakeLists.txt  Readme.md  compile_commands.json  todo.md
assets/models/: Torus.glb  scene.glb
assets/resources/materials/: default.trs  test_material.trs  test_material_2.trs  ui_material.trs  ui_text_material.trs
assets/resources/models/: scene.trs
assets/resources/shaders/: default.trs  test_shader.trs  ui_shader.trs
assets/resources/textures/: test_texture.trs  test_texture_2.trs  ui_text_texture.trs  ui_texture.trs
assets/shaders/: default.frag.glsl  default.vert.glsl  test.frag.glsl  test.vert.glsl  ui.frag.glsl  ui.vert.glsl
assets/textures/: Font.xcf  UI.xcf
benchmarks/: CMakeLists.txt  benchmarks.c  dynamic_allocator.c  noise.c
docs/: Resourecs.md
include/Spark/: PCH.h  defines.h  entry.h  game_types.h
include/Spark/containers/: darray.h  set.h  unordered_map.h
include/Spark/containers/generic/: darray_ints.h  (+1 more)
include/Spark/core/: application.h  clock.h  event.h  input.h  logging.h  smemory.h  sstring.h
include/Spark/ecs/: ecs.h  ecs_world.h  entity.h
include/Spark/math/: mat4.h  math_types.h  quat.h  smath.h  vec2.h  vec3.h  vec4.h
include/Spark/memory/: block_allocator.h  dynamic_allocator.h  freelist.h  gerneal_allocator.h  linear_allocator.h
include/Spark/physics/: physics.h  physics_backend.h
include/Spark/platform/: filesystem.h  platform.h
include/Spark/renderer/: material.h  mesh.h  model.h  renderer_backend.h  renderer_frontend.h  renderer_types.h  shader.h  texture.h
include/Spark/resources/: resource_loader.h  resource_types.h
include/Spark/systems/: core_systems.h
include/Spark/threading/: job.h  mutex.h  thread.h
include/Spark/types/: aabb.h  camera.h  ecs_declarations.h  frustum.h  plane.h  s3d.h  transforms.h
include/Spark/utils/: hashing.h
src/: entry.c
src/containers/: set_u64.c
src/core/: application.c  entry.c  event.c  logging.c  smemory.c  sstring.c
src/core/containers/: darray_ints.c
src/core/core/: application.c  clock.c  input.c  smemory.c
src/core/ecs/: ecs_column.c  ecs_query.c  ecs_system.c  ecs_world.c  entity.c
src/core/math/: srand.c
src/core/memory/: block_allocator.c  dynamic_allocator.c  freelist.c  linear_allocator.c
src/core/platform/: filesystem.c  platform_glfw.c  platform_linux.c
src/core/resources/: resource.c
src/core/systems/: camera_system.c  render_system.c  transform_system.c
src/core/threading/: mutex.c  thread.c
src/core/types/: ecs_declarations.c  plane.c
src/ecs/: ecs.c  ecs_containers.c  ecs_iterator.c  ecs_world.c  entity.c  entity_archetype.c
src/engine/: engine.c
src/memory/: freelist.c  general_allocator.c
src/physics/: physics_backend.c
src/renderer/: material.c  renderer_frontend.c
src/renderer/ui/: ui_image.c
src/renderer/vulkan/: vulkan_buffer.c  vulkan_command_buffer.c  vulkan_fence.c  vulkan_renderpass.c  vulkan_semaphor.c  vulkan_swapchain.c  vulkan_texture.c
src/resources/loaders/: model_loader.c  shader_loader.c
src/systems/: render_system.c  transform_system.c
src/types/: aabb.c  frustum.c
tests/: CMakeLists.txt  allocator_tests.c  container_tests.c  hashmap_tests.c  noise.c  tests.c
tools/resource_copy/: CMakeLists.txt
tools/resource_copy/src/: main.c  s3d.h  s3d_converter.c
(+43 files in other folders)
